plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '22'
targetCompatibility = '22'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.example.demo'
    mainClass = 'com.example.demo.HelloApplication'
    applicationDefaultJvmArgs = [
            '--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls'
    ]
}

javafx {
    version = '22.0.1'
    modules = ['javafx.controls', 'javafx.fxml','javafx.base','javafx.graphics','javafx.media','javafx.swing','javafx.web']
}

dependencies {
    implementation('org.controlsfx:controlsfx:11.2.1')
    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    implementation 'org.postgresql:postgresql:42.7.4'

//    jmetro
    implementation 'org.jfxtras:jmetro:11.6.16'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}